--- a/index.html
+++ b/index.html
@@ -29,5 +29,28 @@
         <h1>Welcome to MegaRent</h1>
         <h3>Your best online rent-a-car</h3>
     </main>
+    <section class="catalog">
+        <h2>Selection from our catalog</h2>
+        <div class="kolona">
+            <img src="slike/car_civil.png" alt="Civil vehicles">
+            <p>Civil vehicles</p>
+            <a href="#" class="buttons">Vief offers</a>
+        </div>
+        <div class="kolona">
+            <img src="slike/car_sport.png" alt="Sport vehicles">
+            <p>Sport vehicles</p>
+            <a href="#" class="buttons">Vief offers</a>
+        </div>
+        <div class="kolona">
+            <img src="slike/car_suv.png" alt="Suv vehicles">
+            <p>SUV's vehicles</p>
+            <a href="#" class="buttons">Vief offers</a>
+        </div>
+        <div class="kolona">
+            <img src="slike/car_van.png" alt="Van vehicles">
+            <p>Transport vehicles</p>
+            <a href="#" class="buttons">Vief offers</a>
+        </div>
+    </section>
 </body>
 </html>
