--- a/index.html
+++ b/index.html
@@ -52,5 +52,30 @@
             <a href="#" class="buttons">Vief offers</a>
         </div>
     </section>
+    <section>
+        <h2>Pricing</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Car type</th><th>Day</th><th>Week</th><th>Month</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Civil</td><td>20$</td><td>100$</td><td>350$</td>
+                </tr>
+                <tr>
+                    <td>Transport</td><td>35$</td><td>150$</td><td>500$</td>
+                </tr>
+                <tr>
+                    <td>Sport</td><td>50$</td><td>300$</td><td>900$</td>
+                </tr>
+                <tr>
+                    <td>SUV</td><td>60$</td><td>350$</td><td>1000$</td>
+                </tr>
+            </tbody>
+        </table>
+        <a href="#" class="buttons" id="pricingButton">View pricing</a>
+    </section>
 </body>
 </html>
